--- a/research/manual_test.ipynb
+++ b/research/manual_test.ipynb
@@ -2,51 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "PermissionError",
-     "evalue": "[Errno 13] Permission denied: 'c:\\\\Projects-Vs\\\\Project-ipynb\\\\research\\\\logs\\\\running_logs.log'",
+     "ename": "ImportError",
+     "evalue": "cannot import name 'render_site' from 'IPYNBrenderer' (c:\\Projects-Vs\\Project-ipynb\\env\\Lib\\site-packages\\project_ipynb-0.0.1-py3.12.egg\\IPYNBrenderer\\__init__.py)",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mPermissionError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mIPYNBrenderer\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01myoutube\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m render_and_display_video\n\u001b[0;32m      2\u001b[0m render_and_display_video(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://www.youtube.com/watch?v=EeGpwC5zr4o&t=8s\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Projects-Vs\\Project-ipynb\\env\\Lib\\site-packages\\project_ipynb-0.0.1-py3.12.egg\\IPYNBrenderer\\youtube.py:4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mensure\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ensure_annotations\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mIPYNBrenderer\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcustom_exception\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m InvalidUrlException\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mIPYNBrenderer\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlogger\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m logger\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpy_youtube\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Data\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_time\u001b[39m(URL:\u001b[38;5;28mstr\u001b[39m)\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mint\u001b[39m:\n",
-      "File \u001b[1;32mc:\\Projects-Vs\\Project-ipynb\\env\\Lib\\site-packages\\project_ipynb-0.0.1-py3.12.egg\\IPYNBrenderer\\logger.py:18\u001b[0m\n\u001b[0;32m      9\u001b[0m log_filepath\u001b[38;5;241m=\u001b[39mos\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(log_dir,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrunning_logs.log\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     10\u001b[0m os\u001b[38;5;241m.\u001b[39mmakedirs(log_filepath,exist_ok\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m     13\u001b[0m logging\u001b[38;5;241m.\u001b[39mbasicConfig(\n\u001b[0;32m     14\u001b[0m     level\u001b[38;5;241m=\u001b[39mlogging\u001b[38;5;241m.\u001b[39mINFO,\n\u001b[0;32m     15\u001b[0m     \u001b[38;5;28mformat\u001b[39m\u001b[38;5;241m=\u001b[39mlogging_str,\n\u001b[0;32m     16\u001b[0m     handlers\u001b[38;5;241m=\u001b[39m[\n\u001b[0;32m     17\u001b[0m         logging\u001b[38;5;241m.\u001b[39mStreamHandler(sys\u001b[38;5;241m.\u001b[39mstdout),\n\u001b[1;32m---> 18\u001b[0m         \u001b[43mlogging\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mFileHandler\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlog_filepath\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     19\u001b[0m               ],\n\u001b[0;32m     20\u001b[0m      )\n\u001b[0;32m     22\u001b[0m logger\u001b[38;5;241m=\u001b[39mlogging\u001b[38;5;241m.\u001b[39mgetLogger(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPYNBrenderer\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\logging\\__init__.py:1231\u001b[0m, in \u001b[0;36mFileHandler.__init__\u001b[1;34m(self, filename, mode, encoding, delay, errors)\u001b[0m\n\u001b[0;32m   1229\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstream \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m   1230\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m-> 1231\u001b[0m     StreamHandler\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\logging\\__init__.py:1263\u001b[0m, in \u001b[0;36mFileHandler._open\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1258\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m   1259\u001b[0m \u001b[38;5;124;03mOpen the current base file with the (original) mode and encoding.\u001b[39;00m\n\u001b[0;32m   1260\u001b[0m \u001b[38;5;124;03mReturn the resulting stream.\u001b[39;00m\n\u001b[0;32m   1261\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m   1262\u001b[0m open_func \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_builtin_open\n\u001b[1;32m-> 1263\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mopen_func\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbaseFilename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmode\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1264\u001b[0m \u001b[43m                 \u001b[49m\u001b[43mencoding\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mencoding\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43merrors\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43merrors\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mPermissionError\u001b[0m: [Errno 13] Permission denied: 'c:\\\\Projects-Vs\\\\Project-ipynb\\\\research\\\\logs\\\\running_logs.log'"
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mIPYNBrenderer\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m render_site\n\u001b[0;32m      4\u001b[0m render_site(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://www.youtube.com/watch?v=zdt9Qh6XMe0&t=952s\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'render_site' from 'IPYNBrenderer' (c:\\Projects-Vs\\Project-ipynb\\env\\Lib\\site-packages\\project_ipynb-0.0.1-py3.12.egg\\IPYNBrenderer\\__init__.py)"
      ]
     }
    ],
    "source": [
-    "from IPYNBrenderer.youtube import render_and_display_video\n",
-    "render_and_display_video(\"https://www.youtube.com/watch?v=EeGpwC5zr4o&t=8s\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(['zdt9Qh6XMe0&t'], '952')"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "URL2=\"https://www.youtube.com/watch?v=zdt9Qh6XMe0&t=952s\"\n",
-    "vid_id2=URL2.split(\"=\")[1].split(\"/\")\n",
-    "time2=URL2.split(\"=\")[2].split(\"s\")[0]\n",
-    "vid_id2,time2"
+    "from IPYNBrenderer import render_site\n",
+    "\n",
+    "\n",
+    "render_site(\"https://www.youtube.com/watch?v=zdt9Qh6XMe0&t=952s\")\n",
+    "\n"
    ]
   },
   {
@@ -55,59 +31,11 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('U5IXSv_8Z1g0w3lP&t', '952')"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "URL3=\"https://youtu.be/zdt9Qh6XMe0?si=U5IXSv_8Z1g0w3lP&t=952\"\n",
-    "vid_id3=URL3.split(\"=\")[1]\n",
-    "time3=URL3.split(\"=\")[2]\n",
-    "\n",
-    "vid_id3,time3\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"https://youtu.be/roO5VGxOw2s\"\n",
-    "\"https://www.youtube.com/watch?v=roO5VGxOw2s\"\n"
-   ]
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "env",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "name": "python"
   }
  },
  "nbformat": 4,
